--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,3 +35,13 @@ p {
   margin: 0;
   font-size: 16px;
 }
+
+#pinBoard {
+float: left;
+margin-top: 8%;
+}
+
+#userProf {
+  margin-top: 5%;
+  float: left;
+}
