--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,8 +37,11 @@ p {
 }
 
 #pinBoard {
-float: left;
+float: right;
 margin-top: 8%;
+position: relative;
+width: 33%;
+height: 75%;
 }
 
 #userProf {
